# nonebot_plugin_naturel_gpt

./: .gitignore  Document.md  README.md  __init__.py  config.py  memory_draft.md  openai_func.py  pyproject.toml
backups/: Document.md  ext_forget.py  ext_remember.py
backups/使用指南/Naturel_GPT 入门指南/: Naturel_GPT 入门指南.md
backups/使用指南/Naturel_GPT 进阶教程/: Naturel_GPT 进阶教程.md
docs/: README.md  _coverpage.md  _sidebar.md  archived_extensions.md  commands.md  configuation.md  extension_list.md  extensions.md  index.html  minecraft.md  q_and_a.md  readme.md
extensions/: Extension.py  ext_VOICEVOX.py  ext_analyzeimage.py  ext_baidu.py  ext_bing_chat.py  ext_dalle_draw.py  ext_email.py  ext_emoticon.py  ext_emoticon_v2.py  ext_evolution.py  ext_google_search.py  ext_local_files.py  ext_lolicon_pic.py  ext_lolicon_search.py  ext_makemidi.py  ext_mc_command.py  ext_memory.py  ext_paint.py  ext_plaintext.py  ext_random.py  ext_random_pic.py  ext_readLink.py  ext_search.py  ext_sexnyan_pic.py  ext_sing.py  ext_stable_diffusion.py  ext_timer.py  ext_voice.py
nonebot_plugin_naturel_gpt/: Extension.py  __init__.py  chat.py  chat_manager.py  claude.py  command_func.py  config.py  logger.py  matcher.py  matcher_MCRcon.py  openai_func.py  persistent_data_manager.py  preset_hub_funcs.py  singleton.py  store.py  text_func.py  text_to_image.py  utils.py
nonebot_plugin_naturel_gpt/MCrcon/: COPING.txt  mcrcon.py
nonebot_plugin_naturel_gpt/res/: additional.css  additional.html
share_exts/: Extension.py  share_ext_azuretts.py
使用指南/Naturel_GPT 入门指南/: Naturel_GPT 入门指南.md
使用指南/Naturel_GPT 入门指南Windows版/: Naturel_GPT 入门指南.md
